2011-06-01  Ivan Maidanski  <ivmai@mail.ru>

	* configure.ac (_PTHREADS): New template (used for NetBSD).
	* configure.ac (THREADDLLIBS): New macro.
	* tests/Makefile.am (test_atomic_LDADD, test_stack_LDADD,
	test_atomic_pthreads_LDADD, test_malloc_LDADD): Use THREADDLLIBS
	instead of "-lpthread".
	* configure: Regenerate.
	* Makefile.in: Ditto.
	* doc/Makefile.in: Ditto.
	* src/Makefile.in: Ditto.
	* src/atomic_ops/Makefile.in: Ditto.
	* src/atomic_ops/sysdeps/Makefile.in: Ditto.
	* src/config.h.in: Ditto.
	* tests/Makefile.in: Ditto.

2011-05-30  Ivan Maidanski  <ivmai@mail.ru>

	* configure.ac (PIC): Add workaround for GCC v3.4.6 which does not
	define the corresponding macro.
	* configure.ac: Don't check for GCC twice.
	* configure: Regenerate.
	* tests/test_malloc.c (DEFAULT_NTHREADS): New macro.
	* tests/test_malloc.c (run_one_test): Refine printed message (in
	case of HAVE_MMAP).
	* tests/test_malloc.c (main): Use DEFAULT_NTHREADS.
	* tests/test_stack.c (main): Cast AO_stack_pop() returned pointer.
	* src/atomic_ops_malloc.c (USE_MMAP_ANON, GC_MMAP_FLAGS,
	OPT_MAP_ANON): New macro.
	* src/atomic_ops_malloc.c (get_mmaped): Pass -1 (instead of 0) as
	file descriptor to mmap() if MAP_ANONYMOUS (same as for MAP_ANON).
	* src/atomic_ops_malloc.c (get_mmaped): Use USE_MMAP_ANON,
	GC_MMAP_FLAGS and OPT_MAP_ANON macros; reformat code; check open()
	returned value.

2011-05-11  Ivan Maidanski  <ivmai@mail.ru>

	* tests/test_malloc.c: Expand all tabs to spaces; remove trailing
	spaces at EOLn.
	* tests/test_malloc.c (LENGTH, LARGE): Rename to LIST_LENGTH and
	LARGE_OBJ_SIZE, respectively.
	* tests/test_malloc.c (MAX_NTHREADS, N_REVERSALS, LIST_LENGTH,
	LARGE_OBJ_SIZE): Do not define unless undefined.
	* tests/test_malloc.c (run_one_test): Recognize DEBUG_RUN_ONE_TEST
	macro.

2011-05-10  Ivan Maidanski  <ivmai@mail.ru>

	* tests/Makefile.am (EXTRA_DIST): Add list_atomic.c; update
	comment.
	* tests/Makefile.am (CLEANFILES): Remove test_atomic_include.h,